# ai-news-scanner-v2

./: .env.example  .env.txt  .gitignore  Procfile  pyproject.toml  railway.toml
.claude/: launch.json
.github/workflows/: scan.yml
config/: sources_china_ai.yaml  sources_global_ai.yaml
docs/: index.html
docs/data/: articles.json
scanner/: db.py  fetcher.py  health.py  llm.py  loader.py  models.py  pipeline.py  settings.py
scripts/: check_sources.py  cron_scan.sh  export_json.py  fetch_only.py  run_scan.py  sync_db.sh
web/: server.py
web/routes/: api.py  dashboard.py
web/templates/: base.html  health.html  index.html  manage.html
web/templates/partials/: feedback_buttons.html  keyword_row.html  source_row.html
